--- a/thinpad_top.sim/sim_1/behav/xsim/xsim.dir/tb_behav/webtalk/usage_statistics_ext_xsim.html
+++ b/thinpad_top.sim/sim_1/behav/xsim/xsim.dir/tb_behav/webtalk/usage_statistics_ext_xsim.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2708876</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Sat Nov 21 03:28:43 2020</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Sun Nov 22 03:41:47 2020</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>XSIM v2019.2 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>1e0777dd008c45fcbaffd6b18f2c35e9</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>45</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>2</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>334fb26a-c0c4-473a-810e-58917f1dff9b</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>334fb26a-c0c4-473a-810e-58917f1dff9b</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>FALSE</TD>
@@ -36,16 +36,15 @@
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>command_line_options</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>command=xsim</TD>
-    <TD>runall=true</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>iteration=2</TD>
-    <TD>runtime=6450963 ns</TD>
-    <TD>simulation_memory=82952_KB</TD>
-    <TD>simulation_time=56.89_sec</TD>
+<TR ALIGN='LEFT'>    <TD>iteration=5</TD>
+    <TD>runtime=7001 us</TD>
+    <TD>simulation_memory=82636_KB</TD>
+    <TD>simulation_time=101.20_sec</TD>
 </TR><TR ALIGN='LEFT'>    <TD>trace_waveform=true</TD>
 </TR>   </TABLE>
    </TD></TR>
